--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,3 +7,5 @@ steps:
       args: ['-m', 'pip', 'install', 'build', 'pytest', 'Flask', '--user']
 options:
     logging: CLOUD_LOGGING_ONLY
+    machineType: e2-standard-2
+    region: us-central1
