--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 blinker==1.8.2 ; python_version >= "3.10" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.10" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+colorama==0.4.6 ; python_version >= "3.10" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
+exceptiongroup==1.2.2 ; python_version >= "3.10" and python_version < "3.11"
 flask==3.0.3 ; python_version >= "3.10" and python_version < "4.0"
+iniconfig==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 itsdangerous==2.2.0 ; python_version >= "3.10" and python_version < "4.0"
 jinja2==3.1.4 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.10" and python_version < "4.0"
+packaging==24.1 ; python_version >= "3.10" and python_version < "4.0"
+pluggy==1.5.0 ; python_version >= "3.10" and python_version < "4.0"
+pytest==8.3.2 ; python_version >= "3.10" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.10" and python_version < "3.11"
 werkzeug==3.0.4 ; python_version >= "3.10" and python_version < "4.0"
