--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,8 +5,9 @@ steps:
     - name: python
       entrypoint: python
       args: ['-m', 'pip', 'install', '-r', 'requirements.txt', '--user']
-    - name: "test"
-      entrypoint: pytest
+    - name: python
+      entrypoint: python
+      args: ["-m", "pytest"]
     - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
       entrypoint: 'bash'
       args: ['-c', 'gcloud config set app/cloud_build_timeout 1600 && gcloud app deploy']
