--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
       args:
       - '-c'
       - |
-        [[ "$BRANCH_NAME" != "master" ]] && git rebase master || echo fail && true
+        [[ "$BRANCH_NAME" != "main" ]] && git rebase main || echo fail && true
 
     - name: 'python'
       entrypoint: 'python'
@@ -25,7 +25,7 @@ steps:
 
     - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
       entrypoint: 'bash'
-      args: ['-c', '[[ "$BRANCH_NAME" == "master" ]] && gcloud config set app/cloud_build_timeout 1600 && gcloud app deploy || echo fail && true']
+      args: ['-c', '[[ "$BRANCH_NAME" == "main" ]] && gcloud config set app/cloud_build_timeout 1600 && gcloud app deploy || echo fail && true']
       timeout: '1600s'
 options:
     logging: CLOUD_LOGGING_ONLY
