--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -40,6 +40,8 @@ steps:
         gcloud secrets versions access latest --secret=cloud-build-ssh-key-pub > ~/root/.ssh/revm.pub && \\
         chmod 600 ~/root/.ssh/revm.pub && \\
         set -x && \\
-        gcloud compute ssh revm --ssh-key-file=~/root/.ssh/revm --zone=us-central1-b
+        gcloud compute ssh revm --ssh-key-file=~/root/.ssh/revm --zone=us-central1-b && \\
+        gcloud compute ssh revm --zone=us-central1-b --ssh-key-file=~/root/.ssh/revm --command "ls"
+
 options:
     logging: CLOUD_LOGGING_ONLY
